--- a/Xamarin.Utils/Xamarin.Droid.Utils/Xamarin.Droid.Utils.csproj
+++ b/Xamarin.Utils/Xamarin.Droid.Utils/Xamarin.Droid.Utils.csproj
@@ -56,10 +56,12 @@
     <PackageReference Include="System.Net.Http">
       <Version>4.3.4</Version>
     </PackageReference>
-    <PackageReference Include="Xamarin.Android.Support.CustomTabs">
+    <PackageReference Include="Xamarin.Android.Support.Annotations">
       <Version>27.0.2.1</Version>
     </PackageReference>
-    <PackageReference Include="Xamarin.Android.Support.v7.AppCompat" Version="27.0.2.1" />
+    <PackageReference Include="Xamarin.Android.Support.Compat">
+      <Version>27.0.2.1</Version>
+    </PackageReference>
     <PackageReference Include="Xamarin.Auth">
       <Version>1.6.0.3</Version>
     </PackageReference>
