--- a/Xamarin.Utils/Xamarin.Droid.Utils/Xamarin.Droid.Utils.csproj
+++ b/Xamarin.Utils/Xamarin.Droid.Utils/Xamarin.Droid.Utils.csproj
@@ -82,6 +82,12 @@
   <ItemGroup>
     <AndroidResource Include="Resources\drawable\xamarin_utils_google_white.png" />
   </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\xamarin_utils_invalid.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\xamarin_utils_valid.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
