- Azure.Server.Utils - Xamarin.Droid.Utils registration

--- a/Xamarin.Utils/Xamarin.Forms.Utils/Xamarin.Forms.Utils.csproj
+++ b/Xamarin.Utils/Xamarin.Forms.Utils/Xamarin.Forms.Utils.csproj
@@ -29,4 +29,8 @@
     <Folder Include="Behaviors\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Azure.Server.Utils\Azure.Server.Utils.csproj" />
+  </ItemGroup>
+
 </Project>
