--- a/Xamarin.Utils/Xamarin.Droid.Utils/Xamarin.Droid.Utils.csproj
+++ b/Xamarin.Utils/Xamarin.Droid.Utils/Xamarin.Droid.Utils.csproj
@@ -47,6 +47,7 @@
   <ItemGroup>
     <Compile Include="Models\AccountStoreInfo.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RegistrationExtensions.cs" />
     <Compile Include="Resources\Resource.Designer.cs" />
     <Compile Include="Services\AuthenticationService.cs" />
   </ItemGroup>
@@ -68,6 +69,10 @@
     </PackageReference>
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\Azure.Server.Utils\Azure.Server.Utils.csproj">
+      <Project>{4EDEA13B-A2F3-41C8-8965-BC463F712A43}</Project>
+      <Name>Azure.Server.Utils</Name>
+    </ProjectReference>
     <ProjectReference Include="..\Xamarin.Forms.Utils\Xamarin.Forms.Utils.csproj">
       <Project>{605F9D4D-445F-49AC-BBEA-E4A5FAAE55CF}</Project>
       <Name>Xamarin.Forms.Utils</Name>
