--- a/Xamarin.Utils/Azure.Server.Utils/Azure.Server.Utils.csproj
+++ b/Xamarin.Utils/Azure.Server.Utils/Azure.Server.Utils.csproj
@@ -43,8 +43,9 @@
   <ItemGroup>
     <Compile Include="CustomAuthentication\AccountBase.cs" />
     <Compile Include="CustomAuthentication\CustomAuthenticationContext.cs" />
+    <Compile Include="CustomAuthentication\CustomLoginController.cs" />
     <Compile Include="CustomAuthentication\CustomLoginProviderUtils.cs" />
-    <Compile Include="CustomAuthentication\CustomRegistrationControllerBase.cs" />
+    <Compile Include="CustomAuthentication\CustomRegistrationController.cs" />
     <Compile Include="CustomAuthentication\Provider.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
@@ -62,6 +63,9 @@
       <Version>2.0.0</Version>
     </PackageReference>
     <PackageReference Include="Microsoft.Azure.Mobile.Server.Entity">
+      <Version>2.0.0</Version>
+    </PackageReference>
+    <PackageReference Include="Microsoft.Azure.Mobile.Server.Login">
       <Version>2.0.0</Version>
     </PackageReference>
     <PackageReference Include="Microsoft.Azure.Mobile.Server.Tables">
