--- a/Xamarin.Utils/Azure.Server.Utils/Azure.Server.Utils.csproj
+++ b/Xamarin.Utils/Azure.Server.Utils/Azure.Server.Utils.csproj
@@ -71,6 +71,9 @@
     <PackageReference Include="Microsoft.Azure.Mobile.Server.Tables">
       <Version>2.0.0</Version>
     </PackageReference>
+    <PackageReference Include="System.IdentityModel.Tokens.Jwt">
+      <Version>4.0.4.403061554</Version>
+    </PackageReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
