--- a/Xamarin.Utils/Xamarin.Forms.Utils/Xamarin.Forms.Utils.csproj
+++ b/Xamarin.Utils/Xamarin.Forms.Utils/Xamarin.Forms.Utils.csproj
@@ -7,6 +7,7 @@
   <ItemGroup>
     <PackageReference Include="Autofac" Version="4.8.1" />
     <PackageReference Include="Microsoft.Azure.Mobile.Client" Version="4.0.2" />
+    <PackageReference Include="Xamarin.Auth" Version="1.6.0.4" />
     <PackageReference Include="Xamarin.Forms" Version="3.4.0.1008975" />
   </ItemGroup>
 
