--- a/Xamarin.Utils/Xamarin.Droid.Utils/Xamarin.Droid.Utils.csproj
+++ b/Xamarin.Utils/Xamarin.Droid.Utils/Xamarin.Droid.Utils.csproj
@@ -49,7 +49,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RegistrationExtensions.cs" />
     <Compile Include="Resources\Resource.Designer.cs" />
-    <Compile Include="Services\AuthenticationService.cs" />
+    <Compile Include="Services\ProviderLoginService.cs" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.Azure.Mobile.Client">
