Azure.Server.Utils - Verification properties in AccountBase - RandomString method - VerificationController - EmailService interface Xamarin.Forms.Utils - Test verification in login controll - VerificationService Xamarin.Droid.Utils - VerificationService registration extension

--- a/Xamarin.Utils/Azure.Server.Utils/Azure.Server.Utils.csproj
+++ b/Xamarin.Utils/Azure.Server.Utils/Azure.Server.Utils.csproj
@@ -47,6 +47,8 @@
     <Compile Include="CustomAuthentication\CustomLoginProviderUtils.cs" />
     <Compile Include="CustomAuthentication\CustomRegistrationController.cs" />
     <Compile Include="CustomAuthentication\Provider.cs" />
+    <Compile Include="CustomAuthentication\VerificationController.cs" />
+    <Compile Include="Email\IEmailService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
