--- a/Xamarin.Utils/Azure.Server.Utils/Azure.Server.Utils.csproj
+++ b/Xamarin.Utils/Azure.Server.Utils/Azure.Server.Utils.csproj
@@ -49,6 +49,7 @@
     <Compile Include="CustomAuthentication\Provider.cs" />
     <Compile Include="CustomAuthentication\VerificationController.cs" />
     <Compile Include="Email\IEmailService.cs" />
+    <Compile Include="Extensions\ApiControllerExtensions.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
