Azure.Server.Utils - AccountController base class amarin.Forms.Utils - AccountInformationService - provides current user information - New test button in LoginControll - Provides current user information . User has to be logged in.

--- a/Xamarin.Utils/Azure.Server.Utils/Azure.Server.Utils.csproj
+++ b/Xamarin.Utils/Azure.Server.Utils/Azure.Server.Utils.csproj
@@ -43,6 +43,7 @@
   <ItemGroup>
     <Compile Include="CustomAuthentication\AccountBase.cs" />
     <Compile Include="CustomAuthentication\CustomAuthenticationContext.cs" />
+    <Compile Include="CustomAuthentication\AccountsController.cs" />
     <Compile Include="CustomAuthentication\CustomLoginController.cs" />
     <Compile Include="CustomAuthentication\CustomLoginProviderUtils.cs" />
     <Compile Include="CustomAuthentication\CustomRegistrationController.cs" />
