--- a/Xamarin.Utils/Xamarin.Forms.Utils/Xamarin.Forms.Utils.csproj
+++ b/Xamarin.Utils/Xamarin.Forms.Utils/Xamarin.Forms.Utils.csproj
@@ -4,10 +4,12 @@
     <TargetFramework>netstandard2.0</TargetFramework>
     <Description>Xamarin.Forms utils.</Description>
     <Authors>Erik Parso</Authors>
-    <PackageTags>Xaamrin.Forms, utils, authentication, base app</PackageTags>
+    <PackageTags>Xamrin.Forms, utils, authentication, base app</PackageTags>
     <GeneratePackageOnBuild>false</GeneratePackageOnBuild>
     <Company>Igloo</Company>
     <PackageId>Igloo.Xamarin.Forms.Utils</PackageId>
+    <Version>1.0.2</Version>
+    <PackageReleaseNotes>Token refresh.</PackageReleaseNotes>
   </PropertyGroup>
 
   <ItemGroup>
