--- a/Xamarin.Utils/Azure.Server.Utils/Azure.Server.Utils.csproj
+++ b/Xamarin.Utils/Azure.Server.Utils/Azure.Server.Utils.csproj
@@ -43,12 +43,10 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CustomAuthentication\AccountBase.cs" />
-    <Compile Include="CustomAuthentication\CustomAuthenticationContext.cs" />
     <Compile Include="CustomAuthentication\AccountsController.cs" />
     <Compile Include="CustomAuthentication\CustomLoginController.cs" />
-    <Compile Include="CustomAuthentication\CustomLoginProviderUtils.cs" />
+    <Compile Include="Extensions\CustomLoginProviderUtils.cs" />
     <Compile Include="CustomAuthentication\CustomRegistrationController.cs" />
-    <Compile Include="CustomAuthentication\Provider.cs" />
     <Compile Include="CustomAuthentication\VerificationController.cs" />
     <Compile Include="Email\IEmailService.cs" />
     <Compile Include="Extensions\ApiControllerExtensions.cs" />
