--- a/Xamarin.Utils/Xamarin.Forms.Utils/Xamarin.Forms.Utils.csproj
+++ b/Xamarin.Utils/Xamarin.Forms.Utils/Xamarin.Forms.Utils.csproj
@@ -13,10 +13,10 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Autofac" Version="4.8.1" />
-    <PackageReference Include="Microsoft.Azure.Mobile.Client" Version="4.0.2" />
+    <PackageReference Include="Autofac" Version="4.9.0" />
+    <PackageReference Include="Microsoft.Azure.Mobile.Client" Version="4.1.1" />
     <PackageReference Include="Xamarin.Auth" Version="1.6.0.4" />
-    <PackageReference Include="Xamarin.Forms" Version="3.4.0.1008975" />
+    <PackageReference Include="Xamarin.Forms" Version="3.5.0.129452" />
   </ItemGroup>
 
   <ItemGroup>
