--- a/Xamarin.Utils/Azure.Server.Utils.Communication/Azure.Server.Utils.Communication.csproj
+++ b/Xamarin.Utils/Azure.Server.Utils.Communication/Azure.Server.Utils.Communication.csproj
@@ -5,11 +5,11 @@
     <Authors>Erik Parso</Authors>
     <Description>Azure.Server.Utils communication library.</Description>
     <PackageTags>Azure zerver communication authentication</PackageTags>
-    <PackageReleaseNotes>Custom authentication with refresh token.</PackageReleaseNotes>
+    <PackageReleaseNotes>Support for multiple account authentication. Upgrade nuget packages.</PackageReleaseNotes>
     <PackageId>Igloo.Azure.Server.Utils.Communication</PackageId>
     <Product>Azure.Server.Utils.Communication</Product>
     <Company>Igloo</Company>
-    <Version>1.0.2</Version>
+    <Version>1.0.3</Version>
   </PropertyGroup>
 
 </Project>
