--- a/Xamarin.Utils/Azure.Server.Utils/Azure.Server.Utils.nuspec
+++ b/Xamarin.Utils/Azure.Server.Utils/Azure.Server.Utils.nuspec
@@ -2,13 +2,13 @@
 <package >
   <metadata>
     <id>Igloo.Azure.Server.Utils</id>
-    <version>1.0.3</version>
+    <version>1.0.3.2</version>
     <title>Azure.Server.Utils</title>
     <authors>Erik Parso</authors>
     <owners>Igloo</owners>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
     <description>Azure server utilities.</description>
-    <releaseNotes>Support for multiple account authentication. Upgrade nuget packages.</releaseNotes>
+    <releaseNotes>Simplified AccountBase with Id as primary key.</releaseNotes>
     <copyright>Copyright 2019</copyright>
     <tags>Azure server mobile app authentication</tags>
   </metadata>
