--- a/Xamarin.Utils/Azure.Server.Utils/Azure.Server.Utils.csproj
+++ b/Xamarin.Utils/Azure.Server.Utils/Azure.Server.Utils.csproj
@@ -51,6 +51,7 @@
     <Compile Include="Email\IEmailService.cs" />
     <Compile Include="Extensions\ApiControllerExtensions.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Results\ForbidenResult.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Azure.Server.Utils.Communication\Azure.Server.Utils.Communication.csproj">
