(Azure.Server.Utils) AUTHENTICATED_BY_CLAIM set on login with extension to extract it from current user. AUTHENTICATED_BY_CLAIM is set only if user authenticates using custom authentication implementation.

--- a/Xamarin.Utils/Azure.Server.Utils/Azure.Server.Utils.csproj
+++ b/Xamarin.Utils/Azure.Server.Utils/Azure.Server.Utils.csproj
@@ -42,6 +42,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Constants.cs" />
     <Compile Include="CustomAuthentication\AccountBase.cs" />
     <Compile Include="CustomAuthentication\AccountsController.cs" />
     <Compile Include="CustomAuthentication\CustomLoginController.cs" />
